--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>迷你课表课表查询</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=1">
     <link rel="stylesheet" href="./static/weui.min.css"/>
+    <style type="text/css">
+      #cnzz_stat_icon_1261246269 {
+        display: none;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
